--- a/localization/kor/AigisMod-Monster-Strings.json
+++ b/localization/kor/AigisMod-Monster-Strings.json
@@ -1,46 +1,46 @@
 {
   "aigisMod:BattleTank": {
-    "NAME": "Battle Tank",
+    "NAME": "배틀 탱크",
     "MOVES": [
-      "SplashAttack.",
-      "PiercingAttack.",
-      "On turn end, deal #b", " Splash damage to a random enemy.",
-      "On turn end, deal #b", " True damage to a random enemy."
+      "확산탄.",
+      "관통탄.",
+      "턴 종료시 무작위의 적에게 #b", " 의 스플래시 데미지를 입힙니다.",
+      "턴 종료시 무작위의 적에게 #b", " 의 관통 데미지를 입힙니다."
     ]
   },
   "aigisMod:EnergyAthanor": {
-    "NAME": "Energy Athanor",
+    "NAME": "에너지 아타노르",
     "MOVES": [
-      "Generate Energy.",
-      "On turn start, gain #b", " Energy."
+      "에너지 생산.",
+      "턴 시작시 #b", " 의 에너지를 얻습니다."
     ]
   },
   "aigisMod:Solais": {
-    "NAME": "Solais",
+    "NAME": "솔라스",
     "MOVES": [
-      "Charge",
-      "Eternal Star"
+      "성천소환의 의",
+      "이터널 스타"
     ],
     "DIALOG": [
-      "The twinkling stars will descend"
+      "반짝이는 별들이 쏟아진다"
     ]
   },
   "aigisMod:Sanara": {
-    "NAME": "Sanara",
+    "NAME": "사나라",
     "MOVES": [
-      "Geo Lay Line",
-      "Megalith Alaunus",
-      "Master Geomancy"
+      "지오 레이라인",
+      "메가리스",
+      "마스터 지오먼시"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Yuugen": {
-    "NAME": "Yuugen",
+    "NAME": "유젠",
     "MOVES": [
-      "Break Shot",
-      "Pain Shot"
+      "브레이크샷",
+      "페인샷"
     ],
     "DIALOG": [
       ""
@@ -49,73 +49,73 @@
   "aigisMod:Alva": {
     "NAME": "Alva",
     "MOVES": [
-      "Cruadin Replica",
-      "Seven Fortress",
-      "Divine Sword Gea Curruid"
+      "크루진 레플리카",
+      "세븐 포트리스",
+      "신검 게이클리드"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Tuan": {
-    "NAME": "Tuan",
+    "NAME": "투안",
     "MOVES": [
-      "Rapid Overrun",
-      "Impregnable Recklessness"
+      "신속유린의 포효",
+      "만용불락의 파쇄자"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Tram": {
-    "NAME": "Tram",
+    "NAME": "트람",
     "MOVES": [
-      "Mac an Luin",
-      "Silver Authority",
+      "맥 아 루인",
+      "은빛 위광",
       "",
-      "Sword of Brilliance"
+      "빛나는 검"
     ],
     "DIALOG": [
-      "Flash of Silver"
+      "은빛 섬광"
     ]
   },
   "aigisMod:Ambrose": {
-    "NAME": "Ambrose",
+    "NAME": "암브로즈",
     "MOVES": [
-      "Flowering Magic",
-      "Magic Garden",
-      "Aval Garden"
+      "플라워링 매직",
+      "매직가든",
+      "아발가든"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Arge": {
-    "NAME": "Arge",
+    "NAME": "아제",
     "MOVES": [
-      "Attack Fortification Semias",
-      "Defense Magic Drone",
-      "Attack Mechanism Miach"
+      "확산타격요새 세미아스",
+      "방위마동기",
+      "원격타격요새 에스라스"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:GoldenMimic": {
-    "NAME": "Golden Mimic",
+    "NAME": "골든 미믹",
     "MOVES": [
-      "Bite",
-      "Escape"
+      "물기",
+      "도주"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Prince": {
-    "NAME": "Prince",
+    "NAME": "왕자",
     "MOVES": [
-      "Raise Morale",
-      "Sacred Treasure of Aigis",
+      "사기 진작",
+      "아이기스의 신기",
       ""
     ],
     "DIALOG": [
@@ -123,23 +123,23 @@
     ]
   },
   "aigisMod:Anna": {
-    "NAME": "Anna",
+    "NAME": "안나",
     "MOVES": [
-      "Artillery Support",
-      "Full power support"
+      "포격 서포트",
+      "전력 서포트"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Riven": {
-    "NAME": "Riven",
+    "NAME": "리븐",
     "MOVES": [
-      "First Night",
-      "Second Night",
-      "Third Night",
-      "Fourth Night",
-      "Fifth Night",
+      "제1야:시작의 노래",
+      "제2야:환대의 연회",
+      "제3야:상야의 여왕",
+      "제4야:영원의 어둠",
+      "상야:반복되는 참극",
       ""
     ],
     "DIALOG": [
@@ -147,7 +147,7 @@
     ]
   },
   "aigisMod:RivenPhantom": {
-    "NAME": "Riven Phantom",
+    "NAME": "변신의 환상",
     "MOVES": [
       "",
       ""
@@ -157,12 +157,12 @@
     ]
   },
   "aigisMod:Lukifer": {
-    "NAME": "Lukifer",
+    "NAME": "루키파",
     "MOVES": [
-      "Soaring Shooting Star",
-      "Morning Star of Dusk",
-      "Morning Star's Descent",
-      "Wings of Dawn"
+      "포효하는 유성",
+      "어스름의 샛별",
+      "명성강림",
+      "여명의 날개"
     ],
     "DIALOG": [
       ""
