--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -1829,8 +1829,8 @@
   },
   "aigisMod:Charles": {
     "NAME": "샤를",
-    "DESCRIPTION": "!M! 취약을 부여합니다. NL 민첩을 1 얻습니다 포션. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "!M! 취약을 부여합니다. NL 민첩을 1 얻습니다 포션. NL 소멸.",
+    "DESCRIPTION": "!M! 취약을 부여합니다. NL 민첩 포션을 1 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!M! 취약을 부여합니다. NL 민첩 포션을 1 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       "신비의 술사"
     ]
@@ -1872,8 +1872,8 @@
   },
   "aigisMod:Corin": {
     "NAME": "콜린",
-    "DESCRIPTION": "힘을 1 얻습니다 포션. NL 타격 카드가 !M! 데미지를 추가로 가합니다. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "힘을 1 얻습니다 포션. NL 타격 카드가 !M! 데미지를 추가로 가합니다. NL 소멸.",
+    "DESCRIPTION": "힘 포션을 1 얻습니다. NL 타격 카드가 !M! 데미지를 추가로 가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "힘 포션을 1 얻습니다. NL 타격 카드가 !M! 데미지를 추가로 가합니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       "백의의 연금술사"
     ]
